--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ myvenv/
 BankAccountClass.py
 BankAccountProgram.py
 Cellphone_test.py
+cellphone.py
+Coin Toss.py
+CoinClass.py
+InsectClass.py
+InsectLength.py
